--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,21 +13,34 @@ header{
     height: 100vh;
 }
 
+section{
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo{
+    display:flex;
+    margin:3%;
+}
+
 .logo img{
     position:fixed;
     height:5vh;
     /* margin-right: 20px; */
 }
 
-.logo{
-    display:flex;
-    margin:3%;
-    gap: 20px;
-}
 
 .logoText{
     display: flex;
     flex-direction: column;
     margin-left: 6vh;
+    height: 5vh;
 }
 
+.illustration img{
+    height: 90vh;
+}
+
+.heading{
+    margin-bottom: 20vh;
+}
